# bandersnatch-updated-plugin

./: .gitignore  LICENSE.txt  Pipfile  README.md  ruff.toml  setup.cfg
bandersnatch_updated_plugin/: updated.py
