[metadata]
name = bandersnatch-updated-plugin
version = 0.1.0
license = GPL-3.0-or-later
author = Ryan Burmeister-Morrison
author_email = rburmeistermorrison@gmail.com
description = A bandersnatch plugin to filter out old packages
long_description = file: README.md
keywords = bandersnatch
classifiers =
  Programming Language :: Python :: 3 :: Only
  Environment :: Plugins
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)

[options]
install_requires =
  bandersnatch
  python-dateutil
packages = find:
python_requires = >=3.10

[options.entry_points]
bandersnatch_filter_plugins.v2.release_file =
  updated = bandersnatch_updated_plugin.updated:UpdatedFilter
